--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,4 +4,5 @@
     <string name="city_name">New York</string>
     <string name="city_desc">Ensoleillé</string>
     <string name="city_temp">24°C</string>
+    <string name="favorite_button">Favoris</string>
 </resources>
