--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="city_name">New York</string>
     <string name="city_desc">Sunny</string>
     <string name="city_temp">24°C</string>
+    <string name="favorite_button">Favorites</string>
 </resources>
