--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Météo</string>
-    <string name="city_name">New York</string>
+    <string name="city_name">Paris</string>
     <string name="city_desc">Ensoleillé</string>
     <string name="city_temp">24°C</string>
     <string name="favorite_button">Favoris</string>
