--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Weather Report</string>
-    <string name="city_name">New York</string>
+    <string name="city_name">Paris</string>
     <string name="city_desc">Sunny</string>
     <string name="city_temp">24°C</string>
     <string name="favorite_button">Favorites</string>
