--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
     <string name="city_name">Paris</string>
     <string name="city_desc">Ensoleillé</string>
     <string name="city_temp">24°C</string>
-    <string name="favorite_button">Favoris</string>
+    <string name="favorite_button">Fav</string>
     <string name="title_activity_favorite">Favoris</string>
     <string name="action_settings">Paramètres</string>
 </resources>
