--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="city_name">Paris</string>
     <string name="city_desc">Sunny</string>
     <string name="city_temp">24°C</string>
-    <string name="favorite_button">Favorites</string>
+    <string name="favorite_button">Fav</string>
     <string name="title_activity_favorite">Favorites</string>
     <string name="action_settings">Settings</string>
 </resources>
